changes on site

--- a/style.css
+++ b/style.css
@@ -46,6 +46,24 @@ body {
   background-image: url("img/icon-phone-header.svg");
 }
 
+.header-github {
+  padding-left: 25px;
+  background-image: url("img/icon-github-header.svg");
+  background-size: 20px;
+}
+
+.header-facebook {
+  padding-left: 23px;
+  background-image: url("img/icon-facebook-header.svg");
+  background-size: 17px;
+}
+
+.header-linkedin {
+  padding-left: 23px;
+  background-image: url("img/icon-linkedin-header.svg");
+  background-size: 17px;
+}
+
 .hero-image {
   margin-bottom: 620px;
 }
@@ -191,4 +209,22 @@ body {
 .footer-phone {
   padding-left: 25px;
   background-image: url("img/icon-phone-footer.svg");
+}
+
+.footer-github {
+  padding-left: 25px;
+  background-image: url("img/icon-github-footer.svg");
+  background-size: 20px;
+}
+
+.footer-facebook {
+  padding-left: 23px;
+  background-image: url("img/icon-facebook-footer.svg");
+  background-size: 17px;
+}
+
+.footer-linkedin {
+  padding-left: 23px;
+  background-image: url("img/icon-linkedin-footer.svg");
+  background-size: 17px;
 }
