--- a/style.css
+++ b/style.css
@@ -178,6 +178,7 @@ body {
 
 .button {
   padding: 6px 20px;
+  margin-bottom: 20px;
   display: inline-block;
   vertical-align: baseline;
   text-decoration: none;
